--- a/proyectos_curso/festival_musica/src/scss/base/_variables.scss
+++ b/proyectos_curso/festival_musica/src/scss/base/_variables.scss
@@ -1,2 +1,11 @@
-$red: blue;
+// Tipografia
+$fuente_principal: 'Montserrat', sans-serif;
+
+// Colores
+$verde: #4CB8B3;
+$rosa: #F52756;
+$amarillo: #FEF46D;
+$morado: #752F97;
+$negro: #000000;
+$blanco: #FFFFFF;
 
