--- a/proyectos_curso/festival_musica/src/scss/layout/_header.scss
+++ b/proyectos_curso/festival_musica/src/scss/layout/_header.scss
@@ -1,16 +1,39 @@
 @use '../base/variables' as val;
+@use '../base/mixins' as mixs;
 
 .header {
   background-color: val.$verde;
   h1 {
     color: val.$blanco;
+    text-align: center;
+    @include mixs.tablet {
+       margin: 0;
+    }
+  }
+  .contenido-header {
+    padding: 2rem;
+    @include mixs.tablet {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
 }
 
 .navegacion-principal {
+  @include mixs.tablet {
+     display: flex;
+    gap: 2rem;
+  }
   a {
+    display: block;
+    text-align: center;
     color: val.$blanco;
     font-size: 2.4rem;
+    margin-bottom: 1rem;
+    @include mixs.tablet {
+       margin: 0;
+    }
     &:hover {
       color: val.$amarillo;
     }
