--- a/proyectos_curso/festival_musica/src/scss/layout/_video.scss
+++ b/proyectos_curso/festival_musica/src/scss/layout/_video.scss
@@ -3,16 +3,42 @@
 
 .video {
   position: relative;
+  max-height: 70rem;
+  min-height: 50rem;
+  overflow: hidden;
   .overlay {
     position: absolute;
     background: rgb(188,0,255);
     background: linear-gradient(270deg, rgba(188,0,255,0.5) 0%, rgba(255,0,169,0.3) 100%);
     height: 100%;
     width: 100%;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
   video {
-    width: 100%;
+    width: auto;
     display: block;
+    @include mixs.desktop {
+      width: 100%;
+    }
+  }
+}
+
+.contenido-video {
+  z-index: 10;
+  h2 {
+    color: val.$blanco;
+    font-size: 7rem;
+    margin: 0;
+  }
+  p {
+    background-color: val.$rosa;
+    display: inline-block;
+    padding: 1rem 2rem;
+    color: val.$blanco;
+    font-weight: bold;
+    font-size: 2.4rem;
+    margin: 0;
   }
 }
