Creando un Mixin para Grid

--- a/proyectos_curso/festival_musica/src/scss/base/_mixins.scss
+++ b/proyectos_curso/festival_musica/src/scss/base/_mixins.scss
@@ -20,3 +20,9 @@
     @content;
   }
 }
+
+@mixin grid($columnas, $unidad) {
+  display: grid;
+  grid-template-columns: repeat($columnas, 1fr);
+  gap: $unidad;
+}
