--- a/proyectos_curso/festival_musica/src/scss/layout/_festival.scss
+++ b/proyectos_curso/festival_musica/src/scss/layout/_festival.scss
@@ -3,15 +3,20 @@
 
 .sobre-festival {
   padding: 5rem 0;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 5rem;
+  @include mixs.tablet {
+    @include mixs.grid(2, 5rem);
+  }
 }
 
 .contenido-festival {
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  margin-top: 5rem;
+  @include mixs.tablet {
+     margin-top: 0;
+  }
   h2 {
     margin-bottom: 2rem;
   }
