Añadir un botón para cerrar la imagen

--- a/proyectos_curso/festival_musica/src/scss/base/_globales.scss
+++ b/proyectos_curso/festival_musica/src/scss/base/_globales.scss
@@ -12,6 +12,10 @@ html {
 body {
   font-family: val.$fuente_principal;
   font-size: 1.6rem;
+
+  &.fijar-body {
+    overflow: hidden;
+  }
 }
 p {
   font-size: 2rem;
